--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: My Website
+title: 정보보안
 subtitle: This is where I will tell my friends way too much about me
 use-site-title: true
 ---
